--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,7 @@
-<% provide(:title, 'Contact') %>
+<% provide(:title, 'About') %>
 
-<h1>Contact Us</h1>
+<h1>About Us</h1>
+
 
 <body>
   <h1>Sample App</h1>
