--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+<!DOCTYPE html>
+<html>
+
+  <body>
+    <h1>Sample App</h1>
+    
+    <p>Find me in app/views/pages/home.html.erb</p>
+    <p>This is home page for the
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
+    </p>
+  </body>
+
+</html>
